# wf-recorder

./: LICENSE  README.md  config.h.in  meson.build  meson_options.txt  wf-recorder.fish
.github/workflows/: build.yaml
manpage/: wf-recorder.1  wf-recorder.1.scd
proto/: meson.build
src/: alsa.cpp  alsa.hpp  audio.cpp  audio.hpp  averr.c  averr.h  buffer-pool.hpp  debug.cpp  debug.hpp  frame-writer.cpp  frame-writer.hpp  ipc.cpp  ipc.hpp  main.cpp  movie.h  opencl.cpp  opencl.hpp  pipewire.cpp  pipewire.hpp  pulse.cpp  pulse.hpp  test.cpp  writer.cpp
